--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reframejs",
   "version": "0.0.1",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "dist/reframe.js",
   "dependencies": {
     "immutable": "^3.7.5",
     "immutablediff": "^0.4.2",
