--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Tomas Drencak",
+  "license": "MIT"
 }
