--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "",
   "main": "dist/re-frame.js",
   "dependencies": {
-    "immutable": "^3.7.5",
-    "immutablediff": "^0.4.2",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "rx": "^4.0.7",
-    "rx-dom": "^7.0.3"
+    "immutable": "3.7.6",
+    "immutablediff": "0.4.2",
+    "react": "0.14.7",
+    "react-dom": "0.14.7",
+    "rx": "4.0.8"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.5.0",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
