--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "re-framejs",
-  "version": "0.0.5",
-  "description": "",
+  "version": "0.0.6",
+  "description": "Reagent re-frame implementation using RxJs",
   "main": "dist/reframe.js",
+  "files": [
+    "dist/reframe.js",
+    "LICENSE",
+    "README.md"
+  ],
   "dependencies": {
     "immutable": "3.7.6",
-    "immutablediff": "0.4.2",
     "react": "0.14.7",
-    "react-dom": "0.14.7",
     "rx": "4.0.8"
   },
   "devDependencies": {
     "babel-core": "6.5.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.5.0",
+    "immutablediff": "0.4.2",
+    "react-dom": "0.14.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
   },
