--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-framejs",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Reagent re-frame implementation using RxJs",
   "main": "dist/reframe.js",
   "files": [
@@ -18,7 +18,7 @@
     "babel-core": "6.5.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.5.0",
-    "immutablediff": "0.4.2",
+    "immutable-diff": "0.1.1",
     "react-dom": "0.14.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
