--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-core": "6.5.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.5.0",
-    "immutable-diff": "0.1.1",
+    "immutablediff": "0.4.4",
     "react-dom": "0.14.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
